Get real readings from BME280 sensor

--- a/STM32L4_bluetooth_sensor.ioc
+++ b/STM32L4_bluetooth_sensor.ioc
@@ -2,12 +2,13 @@
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32L4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -18,10 +19,12 @@ Mcu.Pin12=PA8
 Mcu.Pin13=PA13 (JTMS-SWDIO)
 Mcu.Pin14=PA14 (JTCK-SWCLK)
 Mcu.Pin15=PB3 (JTDO-TRACESWO)
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0
-Mcu.Pin18=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjApplication_4.4.0
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
+Mcu.Pin20=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjApplication_4.4.0
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
@@ -29,7 +32,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-BLE1.4.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -90,6 +93,12 @@ PA8.Locked=true
 PA8.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO-TRACESWO).Signal=SPI1_SCK
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -141,7 +150,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_BlueNRG_MS_Init-STMicroelectronics.X-CUBE-BLE1.4.4.0-false-HAL-true,4-MX_BlueNRG_MS_Process-STMicroelectronics.X-CUBE-BLE1.4.4.0-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
