--- a/STM32L4_bluetooth_sensor.ioc
+++ b/STM32L4_bluetooth_sensor.ioc
@@ -7,8 +7,9 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -22,9 +23,10 @@ Mcu.Pin15=PB3 (JTDO-TRACESWO)
 Mcu.Pin16=PB8
 Mcu.Pin17=PB9
 Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjApplication_4.4.0
+Mcu.Pin20=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0
+Mcu.Pin21=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjApplication_4.4.0
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
@@ -32,7 +34,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-BLE1.4.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -50,6 +52,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0.Locked=true
 PA0.Signal=GPXTI0
@@ -432,6 +435,8 @@ STMicroelectronics.X-CUBE-BLE1.4.4.0_WirelessJjBlueNRGAaMS_RteComponent1=\#defin
 STMicroelectronics.X-CUBE-BLE1.4.4.0_WirelessJjBlueNRGAaMS_RteComponentsize=2
 STMicroelectronics.X-CUBE-BLE1.4.4.0_description=BLE stack and sample applications for BlueNRG-MS module
 STMicroelectronics.X-CUBE-BLE1.4.4.0_license=en.DM00367782.pdf
+TIM3.IPParameters=Prescaler
+TIM3.Prescaler=1220
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjApplication_4.4.0.Mode=WirelessJjApplication
@@ -440,6 +445,8 @@ VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0.Mode=WirelessJj
 VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0.Signal=STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_4.4.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-L476RG
 boardIOC=true
 isbadioc=false
